--- a/app/style.css
+++ b/app/style.css
@@ -21,7 +21,7 @@
 body {
     margin: 0;
     height: 100vh;
-    background: linear-gradient(120deg, #ffffff, #656565, #c0c0c0);
+    background: linear-gradient(120deg, #ffffff, #9e9e9e, #c0c0c0);
     background-size: 400% 400%;
     animation: gradientBG 10s ease infinite;
     color: #fff;
@@ -51,6 +51,16 @@ a{
     text-decoration: none;
     color: aqua;
     font-style: bold;
+}
+
+a:hover{
+    color: rgb(145, 255, 255);
+}
+
+a:active{
+    color: rgb(202, 255, 255);
+    transform: scale(0.98);
+    transition: transform 0.1s;
 }
 
 @keyframes fadeIn {
