--- a/app/style.css
+++ b/app/style.css
@@ -18,13 +18,22 @@
     font-size: 24px;
 }
 
+.logout {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+}
+
 body {
     margin: 0;
     height: 100vh;
-    background: linear-gradient(120deg, #ffffff, #9e9e9e, #c0c0c0);
+    background: linear-gradient(120deg, #38393b, #25293d, #1c1d21);
     background-size: 400% 400%;
     animation: gradientBG 10s ease infinite;
-    color: #fff;
+    color: #000000;
 }
 
 @keyframes gradientBG {
@@ -34,7 +43,7 @@ body {
 }
 
 .container {
-    background: rgba(0, 0, 0, 0.399);
+    background: rgb(230, 230, 230);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
@@ -49,16 +58,16 @@ body {
 
 a{
     text-decoration: none;
-    color: aqua;
+    color: rgb(0, 51, 255);
     font-style: bold;
 }
 
 a:hover{
-    color: rgb(145, 255, 255);
+    color: rgb(0, 106, 255);
 }
 
 a:active{
-    color: rgb(202, 255, 255);
+    color: rgb(0, 106, 255);
     transform: scale(0.98);
     transition: transform 0.1s;
 }
