--- a/app/oefenopdracht2/steam_style.css
+++ b/app/oefenopdracht2/steam_style.css
@@ -1,8 +1,11 @@
-
+body{
+    background-color: #000000;
+}
 /* Game Details */
 .game-details {
-    background: rgba(39, 39, 39, 0.379);
+    background: rgba(0, 0, 0, 0.379);
     padding: 20px;
+    border: 1px solid #ffffff83;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.474);
     backdrop-filter: blur(10px);
@@ -19,7 +22,7 @@
     overflow-y: auto;
     max-height: 500px;
     scrollbar-width: thin;
-    scrollbar-color: #3a475e #1a1a1a;
+    scrollbar-color: #2c2c2c #00000072;
 }
 
 
@@ -33,14 +36,13 @@
 
 .game-image {
     width: 320px;
-    border-radius: 8px;
+    border-radius: 1px;
     margin-bottom: 50px;
-    border: 3px solid #3a475e;
 }
 
 .gamez-title {
     font-size: 36px;
-    color: #66c0f4;
+    color: #ffffff;
 }
 
 .game-genre,
@@ -91,7 +93,7 @@
 /* Links */
 a {
     text-decoration: none;
-    color: #66c0f4;
+    color: #9b0ee6;
 }
 
 a:hover {
@@ -99,3 +101,39 @@ a:hover {
 }
 
 
+@media screen and (max-width: 768px) {
+    .game-details {
+        grid-template-columns: auto;
+        height: 100vh;
+    }
+  }
+
+  @media screen and (max-width: 750px) {
+    .game-details {
+        grid-template-columns: auto;
+        height: 60vh;
+    }
+  }
+
+  @media screen and (max-width: 731px) {
+    .game-details {
+        grid-template-columns: auto;
+        height: 60vh;
+    }
+  }
+
+  @media screen and (max-width: 695px) {
+    .game-details {
+        grid-template-columns: auto;
+        height: 60vh;
+        width: fit-content;
+    }
+  }
+
+  @media screen and (max-width: 472px) {
+    .game-details {
+        grid-template-columns: auto;
+        height: 45vh;
+        width: fit-content;
+    }
+  }
